--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 body{
-    background-color: #41e26e;
+    background-color: #e08de3;
+}
+.outer-pokedex{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#pokedex-heading{
+    margin: 0 auto;
+    letter-spacing: 5px;
+}
+a:visited{
+    color: black;
+    text-decoration: none;
 }
