--- a/src/components/Pokemon/Pokemon.css
+++ b/src/components/Pokemon/Pokemon.css
@@ -1,14 +1,16 @@
 .pokemon{
-    display: flex;
+    border: 2px solid black;
     flex-basis: 20%;
     height: 200px;
     width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 30px;
+    margin-top: 20px;
 }
 
-.pokemon>img{
+.pokemon-image{
     margin-top: 1rem;
     height: 150px;
     max-height: 80%;
@@ -16,10 +18,10 @@
 
 .name{
     font-size: larger;
-    font-family: ''Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif';
+    font-family: Georgia, 'Times New Roman', Times, serif   ;
     letter-spacing: 0.3rem;
 }
 
 .pokemon:hover{
-    background-color: #3cb4cf;
+    background-color: #f2d3f3;
 }
